--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
+    "react-spinners": "^0.14.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-filter": "^0.0.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
